add goods apis for frontend integration.